cncf/CloudNative/orchestrators/k8s/product-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: product-pod
spec:
  containers:
  - name: product
    image: mehmetozkaya/productservice:latest
    ports:
    - containerPort: 8080
