cncf/CloudNative/orchestrators/k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
